--- a/X6. Bee Tips.md
+++ b/X6. Bee Tips.md
@@ -23,3 +23,15 @@
 	#endif	// #if defined(__BEE_DEVELOPMENT__) && __BEE_DEVELOPMENT__
 	
 是
+
+
+
+### 正确使用TODO
+
+
+	// TODO: 当发送
+	
+这样的话在索引里才会出现的，不能//TODO: 当发送
+
+
+	
